arrow visibility fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -94,3 +94,7 @@
 .carousel_indicator--current-slide {
   background: rgba(0, 0, 0, 0.75);
 }
+
+.is-hidden {
+  display: none;
+}
